add newsAPI in home.js script

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -90,8 +90,14 @@ body{
     width: 100%;
     padding: 50px 5vw;
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     grid-gap: 80px;
+}
+
+@media only screen and (max-width: 1090px) {
+    .blogs-section{   
+        grid-template-columns: repeat(2, 1fr);
+    }
 }
 
 @media only screen and (max-width: 600px) {
