--- a/public/css/editor.css
+++ b/public/css/editor.css
@@ -90,6 +90,7 @@ textarea::-webkit-scrollbar-thumb {
     border: none;
     outline: none;
     cursor: pointer;
+    border: 1px solid #cccccc;
 }
 
 .btn.grey {
