--- a/public/css/home.css
+++ b/public/css/home.css
@@ -15,9 +15,13 @@ body{
     color: #fff;
 }
 
+.logo{
+    width: 8em;
+}
+
 .navbar{
     width: 100%;
-    height: 60px;
+    height: 100px;
     position: fixed;
     top: 0;
     left: 0;
@@ -42,11 +46,18 @@ body{
     color: #000;
 }
 
+.link:hover{
+    border-radius: 10px;
+    color: #fff !important;
+    background: #008000;
+    transition: .3s;
+}
+
 .header{
     margin-top: 60px;
     width: 100%;
     height: calc(100vh - 60px);
-    background: url(../img/header.png);
+    background: url(../img/header.jpg);
     background-size: cover;
     display: flex;
     justify-content: center;
@@ -79,10 +90,17 @@ body{
 .btn{
     padding: 10px 20px;
     border-radius: 10px;
+    border: 1px solid #cccccc;
     background: rgba(255, 255, 255, 0.7);
     color: #000;
     text-decoration: none;
     text-transform: capitalize;
+}
+
+.btn:hover{
+    color: #fff !important;
+    background: rgba(0, 0, 0, 0.7);
+    transition: .5s;
 }
 
 
