--- a/public/css/home.css
+++ b/public/css/home.css
@@ -49,7 +49,7 @@ body{
 .link:hover{
     border-radius: 10px;
     color: #fff !important;
-    background: #008000;
+    background: rgba(141, 198 ,63,0.7);
     transition: .3s;
 }
 
@@ -99,7 +99,7 @@ body{
 
 .btn:hover{
     color: #fff !important;
-    background: rgba(0, 0, 0, 0.7);
+    background: rgba(141, 198 ,63,0.7);
     transition: .5s;
 }
 
